# suika-rs

./: README.md  compose.yml  docker-compose.yml  test.sh
batch-processor/: Cargo.toml
data-ingestion-service/: Cargo.toml  Containerfile  Dockerfile
data-ingestion-service/src/: lib.rs  main.rs
data-ingestion-service/src/clients/: kafka_client.rs  mod.rs  redis_client.rs
data-ingestion-service/src/config/: mod.rs  settings.rs
data-ingestion-service/src/handlers/: health.rs  ingestion.rs  mod.rs
data-ingestion-service/src/middleware/: auth.rs  logging.rs
data-ingestion-service/src/models/: mod.rs  payload.rs  response.rs
data-ingestion-service/src/services/: batch.rs  classifier.rs  mod.rs  realtime.rs
data-ingestion-service/src/utils/: error.rs
redis-eventbus-bridge/: Cargo.toml
stream-processor/: Cargo.toml
